8.x-3.0, 2015-12-04
-------------------

This is the first full Drupal 8 port.

 - The procedural API is gone. The hook is replaced by an annotated plugin type,
   and the custom tag table with a config entity type.
 - Custom tags use Twig templates instead of HTML and PHP code.


2012-02-19

 - Repository finally moved to drupal.org
 - Using PHP in custom tags now requires the PHP module, and the correct permission.
   This follows the core pattern of isolating the ability to evaluate PHP code
   into a separate permission from normal administrative access.

2012-02-18 - 2.1.0

 - Repository migrated from SVN on ermarian.net to GitHub.
 - Changed the rendering algorithm to render tags even inside nocode, and then
   discard the result when the nocode tag is closed successfully. This replaces
   the old behavior of blocking all rendering, and then retroactively do it
   if the nocode tag breaks. This code was vulnerable to input that used quadratic time.
 - Stopped injecting tag content and arguments into evaluated PHP code. Instead,
   the code must access the $tag variable to get these arguments.
 - xbbcode currently has branches compatible with 7.x and 8.x.

2010-10-26 - 2.0.4-r495

 - Ported xbbcode_table and xbbcode_list.
 - Compatibility upgrade for Drupal 7: As of issue #934050, text formats use an 
   alphanumeric key instead of an integer. Global constant switched from 0 to
   GLOBAL, to avoid colliding with lowercase text format IDs.
 - Allowed using the format-level settings form for unsaved formats. The new UI
   for Drupal expects settings to work even before an actual format ID exists.
 - The long filter tips have been converted to a table to match the HTML help.
 - More generic and better samples in the xbbcode_basic module.
 - Many other small codestyle fixes and bug fixes.

2010-04-16 - 2.0.0-r462

 - Completely rewrote the parsing algorithm for BBCode. Tags are now required to be nested correctly.