@@ -6,6 +6,7 @@ This is the first full Drupal 8 port.
  - The procedural API is gone. The hook is replaced by an annotated plugin type,
    and the custom tag table with a config entity type.
  - Custom tags use Twig templates instead of HTML and PHP code.
+ - Removed all special tag properties (nocode, plain, selfclosing).
 
 
 2012-02-19
